@@ -8,7 +8,6 @@ import javafx.geometry.Pos;
 import javafx.scene.control.Button;
 import javafx.scene.control.ComboBox;
 import javafx.scene.control.Label;
-import javafx.scene.control.ScrollPane;
 import javafx.scene.effect.DropShadow;
 import javafx.scene.image.Image;
 import javafx.scene.image.ImageView;
@@ -21,16 +20,15 @@ import javafx.scene.text.Font;
 import javafx.scene.text.FontWeight;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
-public class VetarnaryView {
+public class dummyVetarnary {
     private Pet app;
     private Pane rootpane;
     boolean islogin = true;
     List<DoctorModelClass> doctorList;
     private VBox cardsContainer; // Container for doctor cards
 
-    public VetarnaryView(Pet app) {
+    public dummyVetarnary(Pet app) {
         this.app = app;
         initialize();
     }
@@ -45,13 +43,11 @@ public class VetarnaryView {
 
         rootpane = new Pane();
         rootpane.setStyle("-fx-background-color: linear-gradient(from 50% 50% to 0% 0%, #F5D7C3, #ffffff);");
-
-        // Create the VBox to hold the doctor cards
         cardsContainer = new VBox(20); // VBox to hold doctor cards
-        cardsContainer.setPadding(new Insets(20));
-        cardsContainer.setAlignment(Pos.TOP_CENTER);
+        cardsContainer.setLayoutX(150);
+        cardsContainer.setLayoutY(490);
 
-        rootpane.getChildren().addAll(backButton(), getTopBox(), getScrollpane());
+        rootpane.getChildren().addAll(backButton(), getTopBox(), cardsContainer);
 
         // Initially display all doctors
         displayDoctors(doctorList);
@@ -69,46 +65,23 @@ public class VetarnaryView {
         }
     }
 
-    private ScrollPane getScrollpane() {
-        // Wrap the VBox in a ScrollPane
-        ScrollPane scrollPane = new ScrollPane(cardsContainer);
-        scrollPane.setLayoutX(50);
-        scrollPane.setLayoutY(450);
-        scrollPane.setPrefSize(1700, 600);
-        scrollPane.setStyle(
-                "-fx-background: rgba(0, 0, 0, 0); " + // Transparent background
-                        "-fx-background-color: transparent; " +
-                        "-fx-border-color: transparent;");
-        scrollPane.setHbarPolicy(ScrollPane.ScrollBarPolicy.NEVER);
-        scrollPane.setVbarPolicy(ScrollPane.ScrollBarPolicy.NEVER);
-        scrollPane.setContent(cardsContainer);
-        cardsContainer.setStyle("-fx-background-color: transparent;");
-        return scrollPane;
-    }
-
     private HBox createDoctorCard(DoctorModelClass doctor) {
-        ImageView doctorImageView = new ImageView(new Image(doctor.getImg()));
+        ImageView doctorImageView = new ImageView(new Image("vetarnary/doctor2.png"));
         doctorImageView.setFitWidth(250);
         doctorImageView.setFitHeight(250);
         doctorImageView.setPreserveRatio(true);
 
         Label doctorNameLabel = new Label(doctor.getName());
         doctorNameLabel.setFont(Font.font("Arial", FontWeight.BOLD, 24));
-        doctorNameLabel.setTextFill(Color.BLACK);
-        //
         Label qualificationLabel = new Label(doctor.getQulification());
         qualificationLabel.setFont(Font.font("Arial", FontWeight.NORMAL, 16));
-        qualificationLabel.setTextFill(Color.BLACK);
-        //
         Label experienceLabel = new Label(doctor.getExperience() + " Years Experience Overall");
         experienceLabel.setFont(Font.font("Arial", FontWeight.NORMAL, 14));
-        experienceLabel.setTextFill(Color.BLACK);
-        //
+
         HBox ratingBox = new HBox(5);
         Label ratingLabel = new Label(String.valueOf(doctor.getRating()) + "/5");
-        ratingLabel.setFont(Font.font("Arial", FontWeight.NORMAL, 15));
+        ratingLabel.setFont(Font.font("Arial", FontWeight.NORMAL, 14));
         ratingBox.getChildren().add(ratingLabel);
-        ratingLabel.setTextFill(Color.BLACK);
 
         for (int i = 0; i < (int) doctor.getRating(); i++) {
             Image star = new Image("vetarnary/star.png");
@@ -130,14 +103,12 @@ public class VetarnaryView {
             Label tagLabel = new Label(specialization);
             tagLabel.setFont(Font.font("Arial", FontWeight.NORMAL, 12));
             tagLabel.setStyle("-fx-background-color: #e0e0e0; -fx-padding: 5px;");
-            tagLabel.setTextFill(Color.BLACK);
             tagsBox.getChildren().add(tagLabel);
         }
 
         Label descriptionLabel = new Label(doctor.getAbout());
         descriptionLabel.setWrapText(true);
         descriptionLabel.setMaxWidth(300);
-        descriptionLabel.setTextFill(Color.BLACK);
 
         VBox leftVBox = new VBox(10, doctorNameLabel, qualificationLabel, experienceLabel, ratingBox, tagsBox,
                 descriptionLabel);
@@ -146,11 +117,10 @@ public class VetarnaryView {
         VBox contactVBox = new VBox(20);
         contactVBox.setAlignment(Pos.CENTER);
         contactVBox.setPadding(new Insets(10));
-        // location
+
         Label locationLabel = new Label("Location: " + doctor.getLocation());
         locationLabel.setFont(Font.font("Arial", FontWeight.NORMAL, 14));
-        locationLabel.setTextFill(Color.BLACK);
-        // Avable
+
         Label availabilityLabel = new Label(doctor.isAvailable() ? "Available" : "Not Available");
         availabilityLabel.setTextFill(doctor.isAvailable() ? Color.GREEN : Color.RED);
         availabilityLabel.setFont(Font.font("Arial", FontWeight.NORMAL, 24));
@@ -214,19 +184,15 @@ public class VetarnaryView {
         topSection.setAlignment(Pos.CENTER_LEFT);
 
         Label titleLabel = new Label("Which Doctor to Consult for Piles - Top Piles Doctors in India");
-        titleLabel.setFont(Font.font("Arial", FontWeight.BOLD, 30));
         titleLabel.setTextFill(Color.WHITE);
-        titleLabel.setWrapText(true);
-        titleLabel.setAlignment(Pos.TOP_LEFT);
+        titleLabel.setFont(Font.font("Arial", FontWeight.BOLD, 34));
 
         ComboBox<String> cityComboBox = new ComboBox<>();
         cityComboBox.setPromptText("Select City");
-        cityComboBox.getItems().addAll(
-                "Kolkata", "Delhi", "Chennai", "Bangalore", "Hyderabad", "Pune", "Mumbai", "Jaipur", "Lucknow");
-        cityComboBox.setStyle("-fx-font-size: 20px; -fx-background-radius: 10;");
+        cityComboBox.getItems().addAll("pune", "mumbai ", "Narhe");
 
         HBox ratingBox = new HBox(10);
-        Label ratingLabel = new Label("4.5/5");
+        Label ratingLabel = new Label("Rating");
         ratingLabel.setTextFill(Color.WHITE);
         ratingLabel.setFont(Font.font("Arial", FontWeight.BOLD, 20));
         ratingBox.getChildren().add(ratingLabel);
@@ -259,37 +225,22 @@ public class VetarnaryView {
 
         statsBox.getChildren().addAll(patientsLabel, hospitalsLabel, citiesLabel);
 
-        // Search button
         Button searchButton = new Button("Search");
         searchButton.setStyle(
                 "-fx-background-color: orange; -fx-text-fill: white; -fx-font-size: 16px; -fx-font-weight: bold; -fx-padding: 10px 20px; -fx-background-radius: 10;");
         searchButton.setOnAction(e -> {
             String selectedCity = cityComboBox.getValue();
             if (selectedCity != null) {
-                List<DoctorModelClass> filteredDoctors = doctorList.stream()
-                        .filter(doctor -> doctor.getLocation().trim().equalsIgnoreCase(selectedCity.trim()))
-                        .collect(Collectors.toList());
+                List<DoctorModelClass> filteredDoctors = doctorList;
+                // List<DoctorModelClass> filteredDoctors = doctorList.stream()
+                // .filter(doctor -> doctor.getLocation().equalsIgnoreCase(selectedCity))
+                // .toList();
                 displayDoctors(filteredDoctors);
             }
         });
 
-        // See All button
-        Button seeAllButton = new Button("See All");
-        seeAllButton.setStyle(
-                "-fx-background-color: orange; -fx-text-fill: white; -fx-font-size: 16px; -fx-font-weight: bold; -fx-padding: 10px 20px; -fx-background-radius: 10;");
-        seeAllButton.setOnAction(e -> {
-            displayDoctors(doctorList);
-        });
-
-        HBox filterButtonBox = new HBox(30, searchButton, seeAllButton);
-
-        ImageView doctorImageLogo = new ImageView(new Image("vetarnary/doctor.png"));
-        doctorImageLogo.setFitHeight(350);
-        doctorImageLogo.setFitWidth(400);
-
-        topSection.getChildren().addAll(titleLabel, cityComboBox, ratingBox, statsBox, filterButtonBox);
-        HBox mainHBox = new HBox(110, topSection, doctorImageLogo);
-        mainLayout.setTop(mainHBox);
+        topSection.getChildren().addAll(titleLabel, cityComboBox, ratingBox, statsBox, searchButton);
+        mainLayout.setTop(topSection);
 
         return mainLayout;
     }
